2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] New abstration: RCS_MUSTHAVE

	* configure.in (RCS_MUSTHAVE): New AC_DEFUN.
	(DIFF, DIFF3, ac_cv_prog_cc_c99): Use `RCS_MUSTHAVE'.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use `RCS_CBOOL' more.

	* configure.in (COMPAT2): Use `RCS_CBOOL'.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use `AS_IF' more.

	* configure.in (RCS_CBOOL): Use `AS_IF'.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move non-filename DIFF* configuration to configure.in.

	* configure.in (diffutils): In this AC_ARG_WITH form,
	use `AS_HELP_STRING' and incorporate DIFF* var defaulting.
	(DIFF_SUCCESS): Delete AC_SUBST; add AC_DEFINE_UNQUOTED.
	(DIFF_FAILURE, DIFF_TROUBLE, DIFFFLAGS, DIFF_L, DIFF3_BIN): Likewise.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `SENDMAIL' configuration to configure.in.

	* configure.in (mailer): New AC_ARG_WITH.
	(SENDMAIL): New AC_DEFINE_UNQUOTED, if `--with-mailer=PROG'.
	(SENDMAIL): Delete AC_PATH_PROGS, and related followup.
	* README: Update.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `ED' configuration into configure.in.

	* configure.in (eddesc): New AC_DEFUN.
	(ED): New AC_ARG_VAR.
	(ED): Do this AC_PATH_PROG only if diff3(1) is not a user program.
	(ED): New AC_DEFINE_UNQUOTED.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `COMPAT2' configuration into configure.in.

	* configure.in (compat2): New AC_ARG_ENABLE.
	(COMPAT2): New AC_DEFINE_UNQUOTED.
	* README: Update.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dist] Don't distribute INSTALL.RCS.

	* README: Incorporate INSTALL.RCS.
	* Makefile.in (dist): Don't distribute INSTALL.RCS.
	* INSTALL.RCS: Delete file.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't distribute (now-defunct) conf.heg.

	* Makefile.in (dist): Remove "*.heg" from
	list of files to distribute in the src/ subdir.
