@@ -74,9 +74,9 @@ you can migrate the file to a recent format as follows:
 !!! NB: This option (and 2.x compatability) will be removed in GNU RCS 6.x.
 
 Another option is `--with-mailer=PROG'.  This specifies that PROG (an
-absolute filename) should be used to send mail to the original locker when
-a lock is broken.  PROG will be called with one argument, the recipient,
-and its standard input will be:
+absolute filename if not findable on PATH) should be used to send mail
+to the original locker when a lock is broken.  PROG will be called with
+one argument, the recipient, and its standard input will be:
 
   Subject: Broken lock on <FILENAME>
 
@@ -161,8 +161,6 @@ modern compilers don't need this, since they have `const'.
 
 DIFF is the name of your diff program.
 It's normally best to use GNU diffutils.
-If DIFF is not an absolute pathname, setuid execution cannot be used,
-and execution may be a bit slower.
 If you change DIFF after starting a build,
 make sure you rebuild conf.h afterwards;
 otherwise you may introduce a security hole.
@@ -191,9 +189,6 @@ DIFF3_BIN is 1 if DIFF3 is the user-visible GNU diff3 program (see DIFF3).
 Before setting this to 1, make sure your diff3 understands -a, -L, and and -m;
 e.g. the command `echo x | diff3 -m -L 0 -L 1 -L 2 /dev/null /dev/null -'
 should output `x'.
-
-ED is the name of the standard Unix line editor.
-It is used only if DIFF3_BIN is 0.
 
 INSTALL is the command that installs commands, e.g. `../install-sh'.
 INSTALL_DATA installs data, and
