@@ -39,6 +39,16 @@ dnl $2 -- rest of "could not find ..." error message
 AS_IF([test -z "$[]$1" || test no = "$[]$1"],[AC_MSG_ERROR([Could not find $2])])
 ])dnl
 
+AC_DEFUN([RCS_ABSOLUTE_PROGRAM],[dnl
+dnl $1 -- shell variable name
+dnl $2 -- class of program
+dnl $3 -- description for config header file
+save_$1=$[]$1
+AC_PATH_PROG([$1],[$[]$1],[no])
+RCS_MUSTHAVE([$1],[absolute name of $2 program: $save_$1])
+AC_DEFINE_UNQUOTED([$1],["$[]$1"],[$3])
+])dnl
+
 # --enable, --with
 
 AC_ARG_ENABLE([compat2],
@@ -52,17 +62,12 @@ RCS_CBOOL([COMPAT2],[yes],[enable_compat2],
 
 AC_ARG_WITH([mailer],
  [AS_HELP_STRING([--with-mailer=PROG],[use PROG to send mail
-   when a lock is broken (default: don't send mail)])],[
-  if test no = "$withval" ; then
-    AS_UNSET([with_mailer])
-  elif test 0 = `expr "$withval" : '/*'` ; then
-    AC_MSG_ERROR([--with-mailer PROG not absolute: $withval])
-  fi
-])
-if test "$with_mailer" ; then
-AC_DEFINE_UNQUOTED([SENDMAIL],["$with_mailer"],
+   when a lock is broken (default: don't send mail)])],,[with_mailer=no])
+AS_IF([test no = "$with_mailer"],[:],[
+SENDMAIL="$with_mailer"
+RCS_ABSOLUTE_PROGRAM([SENDMAIL],[mailer],
   [Program used to send mail when a lock is broken.])
-fi
+])
 
 AC_ARG_WITH([diffutils],
  [AS_HELP_STRING([--with-diffutils],
@@ -110,8 +115,8 @@ AC_CACHE_VAL(rcs_cv_prog_diff, [
 ])
 DIFF=$rcs_cv_prog_diff
 RCS_MUSTHAVE([DIFF],[RCS-compatible diff])
-AC_MSG_RESULT($DIFF)
-AC_PATH_PROG(DIFF, $DIFF, $DIFF)
+RCS_ABSOLUTE_PROGRAM([DIFF],[diff],
+  [The diff program from GNU diffutils, or workalike.])
 
 # Set DIFF_SUCCESS, DIFF_FAILURE, DIFF_TROUBLE to diff's exit status
 # when it finds no differences, some differences, or trouble.
@@ -250,7 +255,9 @@ case $rcs_cv_prog_diff3_bin in
   AC_MSG_RESULT(yes)
   ac_save_path=$PATH
   PATH=$diff3PATH
-  AC_PATH_PROG(DIFF3, $rcs_cv_prog_diff3_bin, $rcs_cv_prog_diff3_bin)
+  DIFF3=$rcs_cv_prog_diff3_bin
+RCS_ABSOLUTE_PROGRAM([DIFF3],[diff3],
+  [A diff3 program, possibly slightly insane wrt GNU diff3.])
   PATH=$ac_save_path
   ;;
 '')
@@ -294,13 +301,9 @@ AC_DEFINE_UNQUOTED([DIFF3_BIN],[$DIFF3_BIN],
 # Clean up simple `diff' test.
 rm -f conftest*
 
-AC_DEFUN([eddesc],
-  [[The singular ed(1), necessary only if we don't have diff3(1).]])
-AC_ARG_VAR([ED],eddesc)
-if test 0 = $DIFF3_BIN ; then
-  AC_PATH_PROG([ED], [ed], [ed])
-  AC_DEFINE_UNQUOTED([ED],["$ED"],eddesc)
-fi
+ED=ed
+RCS_ABSOLUTE_PROGRAM([ED],[original ed],
+  [The singular ed(1), necessary only if diff3 is not completely sane.])
 
 # Use the GNU pic -n option if available; it avoids GNU extensions,
 # which is need for proper operation to generate a portable man page.
@@ -656,6 +659,5 @@ AC_CONFIG_FILES([
   man/Makefile
   src/Makefile
 ])
-AC_CONFIG_FILES([build-aux/abs-p],[chmod +x build-aux/abs-p])
 
 AC_OUTPUT
